--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
+ <h1>Hello world!</h1>
+    <img src="photo/photo_gogle.png" alt="Logo"/>
 
 <script src="bundle.js"></script>
 </body>
