--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
 
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
- <h1>Hello world!</h1>
-    <img src="photo/photo_gogle.png" alt="Logo"/>
+      <link rel="stylesheet" href="../css/style.css">
+    </head>
+    <body>
+     <h1>Hello world!</h1>
+        <img src="../photo/photo_gogle.png" alt="Logo"/>
 
-<script src="bundle.js"></script>
-</body>
-</html>
+    <script src="../bundle.js"></script>
+    </body>
+    </html>
