--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
         <meta charset="UTF-8">
         <title>Title</title>
 
-      <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
      <h1>Hello world!</h1>
-        <img src="../photo/photo_gogle.png" alt="Logo"/>
+     <img src="<%= require('./photo/photo_gogle.png') %>">
 
-    <script src="../bundle.js"></script>
     </body>
     </html>
